Finalized persistent online/offline state. Refactored html elements to ensure chat window is not visible until successful login.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,7 +42,7 @@ h1,h2,h3,h4,h5,h6 {
 --------------------------------------------------------------*/
 
 /* Messages main container */
-#messages-container {
+#messages-inside--container {
     height: 25rem;
     min-width: 15rem;
     max-width: 35rem;
